# causal_model

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
causal_model/: Untitled.ipynb
config/: default.yaml
notebooks/: causal_inference_demo.ipynb
scripts/: run_analysis.py
src/: __init__.py  utils.py
src/data/: __init__.py  simulator.py
src/models/: __init__.py  causal.py
src/visualization/: __init__.py  plots.py
tests/: test_simulator.py
